# src/modules/photos/photo.route.js
@@ -6,22 +6,13 @@ const route = express.Router();
 
 route.post('/photo/upload', helperMiddleware.checkAccessToken, photoController.uploadPhoto);
 
-route.delete(
-    '/photo/delete',
-    helperMiddleware.checkAccessToken,
-    helperMiddleware.checkOwner,
-    photoController.deletePhoto
-);
+route.delete('/photo/delete', helperMiddleware.checkAccessToken, photoController.deletePhoto);
 
-route.patch(
-    '/photo/addToAlbum',
-    helperMiddleware.checkAccessToken,
-    helperMiddleware.checkPhotoAlbumExist,
-    helperMiddleware.checkOwner,
-    // helperMiddleware.checkAuthor,
-    // helperMiddleware.checkUserAlbumExist,
-    photoController.addToAlbum
-);
+route.patch('/photo/addToAlbum', helperMiddleware.checkAccessToken, photoController.addToAlbum);
+
+route.get('/photo/showPhoto', helperMiddleware.checkAccessToken, photoController.showPhoto);
+
+route.patch('/photo/showPhotoInAlbum', helperMiddleware.checkAccessToken, photoController.showPhotoInAlbum);
 
 module.exports = {
     photoRoute: route,
